--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
-  }
+  },
+  "homepage": "https://myusername.github.io"
 }
